使用findbug插件修改优化后的代码